<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/offwhite"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:text="@string/spending_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/spendName"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:text="@string/sum_is"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/spendSum"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="18sp" />


        <AutoCompleteTextView
            android:id="@+id/spendCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionHint="выберите из списка или введите новую" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/spendEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners1"
            android:text="@string/confirm"
            style="?android:attr/borderlessButtonStyle"
            />
    </LinearLayout>


</LinearLayout>