<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_small"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">


        <EditText

            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"


            android:hint="@string/enter_name"
            android:paddingRight="5dp"
            android:inputType="text" />

        <EditText

            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/enter_price"
            android:inputType="number|numberSigned|numberDecimal"
            android:paddingLeft="10dp"
            android:textSize="15dp" />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/add"

            android:textSize="@dimen/padding_small" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <TextView

            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="80"
            android:background="@color/red"
            android:dividerHeight="@dimen/padding_small"
            android:padding="@dimen/padding_small"
            android:paddingBottom="@dimen/padding1"
            android:paddingLeft="@dimen/padding_small"
            android:paddingStart="@dimen/padding_small"
            android:text="общая стоимость:"
            android:textColor="@color/white"
            tools:ignore="RtlSymmetry" />

        <Button
            android:textColor="@color/black"
            android:id="@+id/checkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="10"
            android:background="@android:color/transparent"
            android:text="@string/check"
            android:textSize="14sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight="@dimen/padding_small"
        tools:listitem="@layout/item">

    </ListView>




</LinearLayout>