<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Уведомление"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/switchNotify"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="right|center|end"
            android:paddingRight="20dp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/realgray">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Выберите валюту:"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton

                android:id="@+id/radioRuble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickRadio"
                android:layout_weight="1"
                android:text="@string/Rubles" />

            <RadioButton
                android:onClick="onClickRadio"
                android:id="@+id/radioDollars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Dollars" />

            <RadioButton
                android:id="@+id/radioEuro"
                android:onClick="onClickRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Euro" />

            <RadioButton
                android:id="@+id/radioGrivens"
                android:onClick="onClickRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Grivens" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/realgray">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="left"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|fill_vertical|fill|start"
            android:text="Число получения зарплаты:"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:gravity="right|center_vertical|end"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/day"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:gravity="end"
            android:text="1"
            android:textSize="20sp" />

    </LinearLayout>





    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/realgray">
    </View>

</LinearLayout>